--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+# Python
+__pycache__/
+*.py[cod]
+*.so
+
+# Virtual environments
+.venv/
+
+# Distribution
+build/
+dist/
+*.egg-info/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+
+# IDE
+.idea/
+
 # Secrets
 .devcontainer/.env
 mise.local.toml
