--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[dependency-groups]
+dev = [
+    "pre-commit",
+    "ruff",
+    "ty",
+]
